[project]
name = "surge"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Taimur Ibrahim", email = "tai.him18@gmail.com"},
]
dependencies = [
    "pydantic>=2.8.2",
    "tenacity>=8.5.0",
    "aiohttp>=3.9.5",
    "asyncio>=3.4.3",
    "anyio==4.3.0",
    "httpx>=0.27.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.10.1",
    "ruff>=0.5.1",
    "pre-commit>=3.7.1",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "covdefaults>=2.3.0",
    "pytest>=8.2.2",
]

[tool.pdm.scripts]
start.cmd = "func start"
lint.cmd = "pre-commit run --all-files"
test.cmd = "pytest"
coverage.cmd = "pytest --disable-warnings --cov --cov-report xml"
coverage.env = { "PYTHONPATH" = "." }

# linters configuration below
[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "D", # pydocstyle
    "DJ", # flake8-django
    "DTZ", # flake8-datetimez
    "E", # pycodestyle errors
    "ERA", # eradicate
    "EXE", # flake8-executable
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "PIE", # flake8-pie
    "PLC", # pylint - convention
    "PLE", # pylint - error
    "PLW", # pylint - warning
    "Q", # flake8-quotes
    "RET", # flake8-return
    "RUF", # Ruff-specific rules
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    "T10", # flake8-debugger
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle - warning
    "YTT", # flake8-2020
]
lint.ignore = [
    "A003", # flake8-builtins - class attribute {name} is shadowing a python builtin
    "B008", # bugbear - function call parameters init
    "D100", # # pydocstyle - missing docstring in public module
    "D104", # pydocstyle - missing docstring in public package
    "D107", # pydocstyle - missing docstring in __init__
    "D205", # pydocstyle - 1 blank line required between summary line and description
    "E501", # pycodestyle line too long, handled by ruff format
    "ISC001", # ruff formatter incompatible
]
src = ["src", "tests", "e2e"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.*" = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C901",
    "D",
    "DTZ",
    "EM",
    "FBT",
    "G",
    "N",
    "PGH",
    "PIE",
    "PLR",
    "PLW",
    "RSE",
    "S",
    "S101",
    "SIM",
    "TCH",
    "TRY",
]
"e2e/**/*.*" = [
    "D",
    "DTZ",
    "S",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src", "e2e", "tests"]

[tool.mypy]
packages = ["tests", "src"]
python_version = "3.11"
plugins = ["pydantic.mypy"]
disallow_any_generics = false
disallow_untyped_decorators = false
implicit_reexport = false
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
disable_error_code = 'import-untyped'

[tool.coverage.run]
omit = ["tests/*", "e2e/*"]
plugins = ["covdefaults"]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    'if TYPE_CHECKING:',
]
fail_under = 95

[tool.pytest.ini_options]
asyncio_mode = "auto"
